--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "homepage": "https://github.com/HyeonWooGa/park-yeon-woo-by-vanilla-js#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
